--- a/astro/astro.html
+++ b/astro/astro.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 function downloadJSAtOnload() {
   var element = document.createElement("script");
-  element.src ="http://<domain>/ssowebnx/clientping.aspx";
+  element.src ="https://login.astro.com.my/ssowebnx/clientping.aspx";
   document.body.appendChild(element);
 }
 
